boolean controls. hide/show that shit

--- a/media/css/boozybrowser.css
+++ b/media/css/boozybrowser.css
@@ -40,6 +40,38 @@
     border: 1px solid #545450;
     padding: 15px;
     background-color: white;
+
+    -webkit-transition: all 1s ease-in-out;
+       -moz-transition: all 1s ease-in-out;
+        -ms-transition: all 1s ease-in-out;
+         -o-transition: all 1s ease-in-out;
+            transition: all 1s ease-in-out;
+}
+.boozy-menu .fade-out {
+    -webkit-opacity: 0;
+       -moz-opacity: 0;
+        -ms-opacity: 0;
+         -o-opacity: 0;
+            opacity: 0;
+
+    -webkit-transition: all 1s ease-in-out;
+       -moz-transition: all 1s ease-in-out;
+        -ms-transition: all 1s ease-in-out;
+         -o-transition: all 1s ease-in-out;
+            transition: all 1s ease-in-out;
+}
+.boozy-menu .fade-in {
+    -webkit-opacity: 1;
+       -moz-opacity: 1;
+        -ms-opacity: 1;
+         -o-opacity: 1;
+            opacity: 1;
+
+    -webkit-transition: all 1s ease-in-out;
+       -moz-transition: all 1s ease-in-out;
+        -ms-transition: all 1s ease-in-out;
+         -o-transition: all 1s ease-in-out;
+            transition: all 1s ease-in-out;
 }
 .boozy-menu .font {
     font-family: helvetica;
@@ -66,11 +98,18 @@
 }
 .boozy-menu .control {
     width: 172px;
-
 }
 .boozy-menu .control:hover {
     background-color: #ECF1DA;
 }
+.boozy-menu.hide-menu {
+    -webkit-transform:  translateY(-92%);
+       -moz-transform:  translateY(-92%);
+        -ms-transform:  translateY(-92%);
+         -o-transform:  translateY(-92%);
+            transform:  translateY(-92%);
+}
+
 /* this is where the menu classes live */
 
 /* 
