tryin some stuffs

--- a/boozy-chrome/boozychrome.css
+++ b/boozy-chrome/boozychrome.css
@@ -1,6 +1,6 @@
+html {
+}
 .boozy-menu {
-    z-index: 9999999;
-    position: fixed;
     right: 20px;
     top: 20px;
     border: 1px solid #545450;
