--- a/media/css/boozybrowser.css
+++ b/media/css/boozybrowser.css
@@ -1,268 +1,334 @@
 /* this is where the buttons classes live */
+/* line 2, ../scss/boozybrowser.scss */
 .button-container {
-    position: relative;
-    width: auto;
-    background-color: #333;
-    padding: 15px;
-    border-radius: 5px;
-    margin: 15px;
+  position: relative;
+  width: auto;
+  background-color: #333;
+  padding: 15px;
+  border-radius: 5px;
+  margin: 15px;
 }
+
+/* line 10, ../scss/boozybrowser.scss */
 .button {
-    display: inline-block;
-    position: relative;
-    -webkit-box-shadow: 1px 1px 3px #CCC;
-       -moz-box-shadow: 1px 1px 3px #CCC;
-            box-shadow: 1px 1px 3px #CCC;
-    border-radius: 5px;
-    border: 2px solid #CCC;
-    padding: 5px;
-    margin: 8px;
-    cursor: pointer; 
-    background-color: #DDD;
-    
+  display: inline-block;
+  position: relative;
+  -webkit-box-shadow: 1px 1px 3px #CCC;
+  -moz-box-shadow: 1px 1px 3px #CCC;
+  box-shadow: 1px 1px 3px #CCC;
+  border-radius: 5px;
+  border: 2px solid #CCC;
+  padding: 5px;
+  margin: 8px;
+  cursor: pointer;
+  background-color: #DDD;
 }
+
+/* line 24, ../scss/boozybrowser.scss */
 .pressed {
-    border: 2px solid #CCC;
-    -webkit-box-shadow: inset 3px 3px 8px #333;
-       -moz-box-shadow: inset 3px 3px 8px #333;
-            box-shadow: inset 3px 3px 8px #333;
+  border: 2px solid #CCC;
+  -webkit-box-shadow: inset 3px 3px 8px #333;
+  -moz-box-shadow: inset 3px 3px 8px #333;
+  box-shadow: inset 3px 3px 8px #333;
 }
 
 /* this is where the typing classes live */
+/* line 32, ../scss/boozybrowser.scss */
 .typin {
-    background-color: #DDD;
-    margin: 15px;
+  background-color: #DDD;
+  margin: 15px;
 }
+
+/* line 36, ../scss/boozybrowser.scss */
 .boozy-menu {
-    position: fixed;
-    right: 20px;
-    top: 20px;
-    border: 1px solid #545450;
-    padding: 15px;
-    background-color: white;
-
-    -webkit-transition: all 1s ease-in-out;
-       -moz-transition: all 1s ease-in-out;
-        -ms-transition: all 1s ease-in-out;
-         -o-transition: all 1s ease-in-out;
-            transition: all 1s ease-in-out;
+  position: fixed;
+  right: 20px;
+  top: 20px;
+  border: 1px solid #545450;
+  padding: 15px;
+  background-color: white;
+  -webkit-transition: all 1s ease-in-out;
+  -moz-transition: all 1s ease-in-out;
+  -ms-transition: all 1s ease-in-out;
+  -o-transition: all 1s ease-in-out;
+  transition: all 1s ease-in-out;
 }
+
+/* line 50, ../scss/boozybrowser.scss */
 .divider-top {
-    border-top: 1px solid rgba(235, 235, 235, 0.6);
-    
+  border-top: 1px solid rgba(235, 235, 235, 0.6);
 }
+
+/* line 54, ../scss/boozybrowser.scss */
 .divider-bottom {
-    border-bottom: 1px solid rgba(235, 235, 235, 0.6);
-    
+  border-bottom: 1px solid rgba(235, 235, 235, 0.6);
 }
+
+/* line 58, ../scss/boozybrowser.scss */
 .divider-both {
-    border-top: 1px solid rgba(235, 235, 235, 0.6);
-    border-bottom: 1px solid rgba(235, 235, 235, 0.6);
+  border-top: 1px solid rgba(235, 235, 235, 0.6);
+  border-bottom: 1px solid rgba(235, 235, 235, 0.6);
 }
+
+/* line 62, ../scss/boozybrowser.scss */
 .boozy-menu .fade-out {
-    -webkit-opacity: 0;
-       -moz-opacity: 0;
-        -ms-opacity: 0;
-         -o-opacity: 0;
-            opacity: 0;
-
-    -webkit-transition: all 1s ease-in-out;
-       -moz-transition: all 1s ease-in-out;
-        -ms-transition: all 1s ease-in-out;
-         -o-transition: all 1s ease-in-out;
-            transition: all 1s ease-in-out;
+  -webkit-opacity: 0;
+  -moz-opacity: 0;
+  -ms-opacity: 0;
+  -o-opacity: 0;
+  opacity: 0;
+  -webkit-transition: all 1s ease-in-out;
+  -moz-transition: all 1s ease-in-out;
+  -ms-transition: all 1s ease-in-out;
+  -o-transition: all 1s ease-in-out;
+  transition: all 1s ease-in-out;
 }
+
+/* line 75, ../scss/boozybrowser.scss */
 .boozy-menu .fade-in {
-    -webkit-opacity: 1;
-       -moz-opacity: 1;
-        -ms-opacity: 1;
-         -o-opacity: 1;
-            opacity: 1;
+  -webkit-opacity: 1;
+  -moz-opacity: 1;
+  -ms-opacity: 1;
+  -o-opacity: 1;
+  opacity: 1;
+  -webkit-transition: all 1s ease-in-out;
+  -moz-transition: all 1s ease-in-out;
+  -ms-transition: all 1s ease-in-out;
+  -o-transition: all 1s ease-in-out;
+  transition: all 1s ease-in-out;
+}
 
-    -webkit-transition: all 1s ease-in-out;
-       -moz-transition: all 1s ease-in-out;
-        -ms-transition: all 1s ease-in-out;
-         -o-transition: all 1s ease-in-out;
-            transition: all 1s ease-in-out;
-}
+/* line 88, ../scss/boozybrowser.scss */
 .boozy-menu .font {
-    font-family: helvetica;
+  font-family: helvetica;
 }
+
+/* line 91, ../scss/boozybrowser.scss */
 .boozy-menu .title {
-    color: #545450;
+  color: #545450;
 }
+
+/* line 94, ../scss/boozybrowser.scss */
 .boozy-menu .switch {
-    padding: 5px;
+  padding: 5px;
 }
+
+/* line 97, ../scss/boozybrowser.scss */
 .boozy-menu .switch .option {
-    width: 10px;
-    height: 10px;
-    border-radius: 20px;
+  width: 10px;
+  height: 10px;
+  border-radius: 20px;
 }
+
+/* line 102, ../scss/boozybrowser.scss */
 .boozy-menu .switch .on {
-    background-color: green;
+  background-color: green;
 }
+
+/* line 105, ../scss/boozybrowser.scss */
 .boozy-menu .switch .off {
-    background-color: red;
+  background-color: red;
 }
+
+/* line 108, ../scss/boozybrowser.scss */
 .boozy-menu .switch .deactivated {
-    background-color: #545450;
+  background-color: #545450;
 }
+
+/* line 111, ../scss/boozybrowser.scss */
 .boozy-menu .control {
-    width: 172px;
+  width: 172px;
 }
+
+/* line 114, ../scss/boozybrowser.scss */
 .boozy-menu .control:hover {
-    background-color: #ECF1DA;
+  background-color: #ECF1DA;
 }
+
+/* line 117, ../scss/boozybrowser.scss */
 .boozy-menu.hide-menu {
-    -webkit-transform:  translateY(-92%);
-       -moz-transform:  translateY(-92%);
-        -ms-transform:  translateY(-92%);
-         -o-transform:  translateY(-92%);
-            transform:  translateY(-92%);
+  -webkit-transform: translateY(-92%);
+  -moz-transform: translateY(-92%);
+  -ms-transform: translateY(-92%);
+  -o-transform: translateY(-92%);
+  transform: translateY(-92%);
 }
 
 /* this is where the menu classes live */
-
 /* 
     Somewhat Functional Section:
         This means these are classes that are intended to be dynamically toggled
         at the moment they should either represent boolean actions or incremental 
         numbered actions
 */
+/* line 133, ../scss/boozybrowser.scss */
 .transition-ease-out {
-    -webkit-transition: all 2s ease-out;
-       -moz-transition: all 2s ease-out;
-        -ms-transition: all 2s ease-out;
-         -o-transition: all 2s ease-out;
-            transition: all 2s ease-out;
-} 
+  -webkit-transition: all 2s ease-out;
+  -moz-transition: all 2s ease-out;
+  -ms-transition: all 2s ease-out;
+  -o-transition: all 2s ease-out;
+  transition: all 2s ease-out;
+}
 
 /* blur classes */
+/* line 142, ../scss/boozybrowser.scss */
 .blur-6 {
-    -webkit-filter: blur(6px);
-       -moz-filter: blur(6px);
-        -ms-filter: blur(6px);
-         -o-filter: blur(6px);
-            filter: blur(6px);
-}
-.blur-5 {
-    -webkit-filter: blur(5px);
-       -moz-filter: blur(5px);
-        -ms-filter: blur(5px);
-         -o-filter: blur(5px);
-            filter: blur(5px);
-}
-.blur-4 {
-    -webkit-filter: blur(4px);
-       -moz-filter: blur(4px);
-        -ms-filter: blur(4px);
-         -o-filter: blur(4px);
-            filter: blur(4px);
-}
-.blur-3 {
-    -webkit-filter: blur(3px);
-       -moz-filter: blur(3px);
-        -ms-filter: blur(3px);
-         -o-filter: blur(3px);
-            filter: blur(3px);
-}
-.blur-2 {
-    -webkit-filter: blur(2px);
-       -moz-filter: blur(2px);
-        -ms-filter: blur(2px);
-         -o-filter: blur(2px);
-            filter: blur(2px);
-}
-.blur-1 {
-    -webkit-filter: blur(1px);
-       -moz-filter: blur(1px);
-        -ms-filter: blur(1px);
-         -o-filter: blur(1px);
-            filter: blur(1px);
-}
-.blur-0 {
-    -webkit-filter: blur(0px);
-       -moz-filter: blur(0px);
-        -ms-filter: blur(0px);
-         -o-filter: blur(0px);
-            filter: blur(0px);
+  -webkit-filter: blur(6px);
+  -moz-filter: blur(6px);
+  -ms-filter: blur(6px);
+  -o-filter: blur(6px);
+  filter: blur(6px);
 }
 
+/* line 149, ../scss/boozybrowser.scss */
+.blur-5 {
+  -webkit-filter: blur(5px);
+  -moz-filter: blur(5px);
+  -ms-filter: blur(5px);
+  -o-filter: blur(5px);
+  filter: blur(5px);
+}
+
+/* line 156, ../scss/boozybrowser.scss */
+.blur-4 {
+  -webkit-filter: blur(4px);
+  -moz-filter: blur(4px);
+  -ms-filter: blur(4px);
+  -o-filter: blur(4px);
+  filter: blur(4px);
+}
+
+/* line 163, ../scss/boozybrowser.scss */
+.blur-3 {
+  -webkit-filter: blur(3px);
+  -moz-filter: blur(3px);
+  -ms-filter: blur(3px);
+  -o-filter: blur(3px);
+  filter: blur(3px);
+}
+
+/* line 170, ../scss/boozybrowser.scss */
+.blur-2 {
+  -webkit-filter: blur(2px);
+  -moz-filter: blur(2px);
+  -ms-filter: blur(2px);
+  -o-filter: blur(2px);
+  filter: blur(2px);
+}
+
+/* line 177, ../scss/boozybrowser.scss */
+.blur-1 {
+  -webkit-filter: blur(1px);
+  -moz-filter: blur(1px);
+  -ms-filter: blur(1px);
+  -o-filter: blur(1px);
+  filter: blur(1px);
+}
+
+/* line 184, ../scss/boozybrowser.scss */
+.blur-0 {
+  -webkit-filter: blur(0px);
+  -moz-filter: blur(0px);
+  -ms-filter: blur(0px);
+  -o-filter: blur(0px);
+  filter: blur(0px);
+}
+
+/* line 192, ../scss/boozybrowser.scss */
 .rotate-5 {
-    -webkit-transform:  rotate(5deg);
-       -moz-transform:  rotate(5deg);
-        -ms-transform:  rotate(5deg);
-         -o-transform:  rotate(5deg);
-            transform:  rotate(5deg);
+  -webkit-transform: rotate(5deg);
+  -moz-transform: rotate(5deg);
+  -ms-transform: rotate(5deg);
+  -o-transform: rotate(5deg);
+  transform: rotate(5deg);
 }
+
+/* line 199, ../scss/boozybrowser.scss */
 .rotate-4 {
-    -webkit-transform:  rotate(4deg);
-       -moz-transform:  rotate(4deg);
-        -ms-transform:  rotate(4deg);
-         -o-transform:  rotate(4deg);
-            transform:  rotate(4deg);
+  -webkit-transform: rotate(4deg);
+  -moz-transform: rotate(4deg);
+  -ms-transform: rotate(4deg);
+  -o-transform: rotate(4deg);
+  transform: rotate(4deg);
 }
+
+/* line 206, ../scss/boozybrowser.scss */
 .rotate-3 {
-    -webkit-transform:  rotate(3deg);
-       -moz-transform:  rotate(3deg);
-        -ms-transform:  rotate(3deg);
-         -o-transform:  rotate(3deg);
-            transform:  rotate(3deg);
+  -webkit-transform: rotate(3deg);
+  -moz-transform: rotate(3deg);
+  -ms-transform: rotate(3deg);
+  -o-transform: rotate(3deg);
+  transform: rotate(3deg);
 }
+
+/* line 213, ../scss/boozybrowser.scss */
 .rotate-2 {
-    -webkit-transform:  rotate(2deg);
-       -moz-transform:  rotate(2deg);
-        -ms-transform:  rotate(2deg);
-         -o-transform:  rotate(2deg);
-            transform:  rotate(2deg);
+  -webkit-transform: rotate(2deg);
+  -moz-transform: rotate(2deg);
+  -ms-transform: rotate(2deg);
+  -o-transform: rotate(2deg);
+  transform: rotate(2deg);
 }
+
+/* line 220, ../scss/boozybrowser.scss */
 .rotate-1 {
-    -webkit-transform:  rotate(1deg);
-       -moz-transform:  rotate(1deg);
-        -ms-transform:  rotate(1deg);
-         -o-transform:  rotate(1deg);
-            transform:  rotate(1deg);
+  -webkit-transform: rotate(1deg);
+  -moz-transform: rotate(1deg);
+  -ms-transform: rotate(1deg);
+  -o-transform: rotate(1deg);
+  transform: rotate(1deg);
 }
+
+/* line 227, ../scss/boozybrowser.scss */
 .rotate-0 {
-    -webkit-transform:  rotate(0deg);
-       -moz-transform:  rotate(0deg);
-        -ms-transform:  rotate(0deg);
-         -o-transform:  rotate(0deg);
-            transform:  rotate(0deg);
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -ms-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
 }
+
+/* line 234, ../scss/boozybrowser.scss */
 .rotate-neg-1 {
-    -webkit-transform:  rotate(-1deg);
-       -moz-transform:  rotate(-1deg);
-        -ms-transform:  rotate(-1deg);
-         -o-transform:  rotate(-1deg);
-            transform:  rotate(-1deg);
+  -webkit-transform: rotate(-1deg);
+  -moz-transform: rotate(-1deg);
+  -ms-transform: rotate(-1deg);
+  -o-transform: rotate(-1deg);
+  transform: rotate(-1deg);
 }
+
+/* line 241, ../scss/boozybrowser.scss */
 .rotate-neg-2 {
-    -webkit-transform:  rotate(-2deg);
-       -moz-transform:  rotate(-2deg);
-        -ms-transform:  rotate(-2deg);
-         -o-transform:  rotate(-2deg);
-            transform:  rotate(-2deg);
+  -webkit-transform: rotate(-2deg);
+  -moz-transform: rotate(-2deg);
+  -ms-transform: rotate(-2deg);
+  -o-transform: rotate(-2deg);
+  transform: rotate(-2deg);
 }
+
+/* line 248, ../scss/boozybrowser.scss */
 .rotate-neg-3 {
-    -webkit-transform:  rotate(-3deg);
-       -moz-transform:  rotate(-3deg);
-        -ms-transform:  rotate(-3deg);
-         -o-transform:  rotate(-3deg);
-            transform:  rotate(-3deg);
+  -webkit-transform: rotate(-3deg);
+  -moz-transform: rotate(-3deg);
+  -ms-transform: rotate(-3deg);
+  -o-transform: rotate(-3deg);
+  transform: rotate(-3deg);
 }
+
+/* line 255, ../scss/boozybrowser.scss */
 .rotate-neg-4 {
-    -webkit-transform:  rotate(-4deg);
-       -moz-transform:  rotate(-4deg);
-        -ms-transform:  rotate(-4deg);
-         -o-transform:  rotate(-4deg);
-            transform:  rotate(-4deg);
+  -webkit-transform: rotate(-4deg);
+  -moz-transform: rotate(-4deg);
+  -ms-transform: rotate(-4deg);
+  -o-transform: rotate(-4deg);
+  transform: rotate(-4deg);
 }
+
+/* line 262, ../scss/boozybrowser.scss */
 .rotate-neg-5 {
-    -webkit-transform:  rotate(-5deg);
-       -moz-transform:  rotate(-5deg);
-        -ms-transform:  rotate(-5deg);
-         -o-transform:  rotate(-5deg);
-            transform:  rotate(-5deg);
+  -webkit-transform: rotate(-5deg);
+  -moz-transform: rotate(-5deg);
+  -ms-transform: rotate(-5deg);
+  -o-transform: rotate(-5deg);
+  transform: rotate(-5deg);
 }
