--- a/media/scss/partials/_demo.scss
+++ b/media/scss/partials/_demo.scss
@@ -19,7 +19,30 @@
     margin: 8px;
     cursor: pointer; 
     background-color: #DDD;
-    
+    width: random() + px;
+    animation: width-stuffs 5s infinite;
+    -webkit-animation: width-stuffs 5s infinite;
+}
+$loop: 100;
+$direction: -1;
+@-webkit-keyframes width-stuffs {
+  @while $loop > 0 {
+    #{$loop * 1%} {
+        width: random() + px;
+    } 
+    $step: $direction * 10;
+    $loop: $loop + $step; 
+
+  }
+}
+@keyframes width-stuffs {
+  @while $loop > 0 {
+    #{$loop * 1%} {
+        width: random() + px;
+    } 
+    $step: $direction * 10;
+    $loop: $loop + $step; 
+  }
 }
 .pressed {
     border: 2px solid #CCC;
