--- a/media/css/boozybrowser.css
+++ b/media/css/boozybrowser.css
@@ -27,52 +27,52 @@
 @-webkit-keyframes width-stuffs {
   /* line 26, ../scss/partials/_demo.scss */
   100% {
-    width: 62px;
+    width: 77px;
   }
 
   /* line 26, ../scss/partials/_demo.scss */
   90% {
-    width: 82px;
+    width: 75px;
   }
 
   /* line 26, ../scss/partials/_demo.scss */
   80% {
-    width: 2px;
+    width: 35px;
   }
 
   /* line 26, ../scss/partials/_demo.scss */
   70% {
-    width: 7px;
+    width: 44px;
   }
 
   /* line 26, ../scss/partials/_demo.scss */
   60% {
-    width: 27px;
+    width: 2px;
   }
 
   /* line 26, ../scss/partials/_demo.scss */
   50% {
-    width: 97px;
+    width: 61px;
   }
 
   /* line 26, ../scss/partials/_demo.scss */
   40% {
-    width: 38px;
+    width: 25px;
   }
 
   /* line 26, ../scss/partials/_demo.scss */
   30% {
-    width: 87px;
+    width: 4px;
   }
 
   /* line 26, ../scss/partials/_demo.scss */
   20% {
-    width: 16px;
+    width: 6px;
   }
 
   /* line 26, ../scss/partials/_demo.scss */
   10% {
-    width: 8px;
+    width: 32px;
   }
 }
 
@@ -236,57 +236,79 @@
   perspective: 1000;
 }
 
+/* commenting this guy out to be used as an example
+$loop: 100;
+@-webkit-keyframes width-stuffs {
+  @while $loop > 0 {
+    0% {
+        width: random() + px;
+    } 
+    $step: -10;
+    $loop: $loop + $step; 
+
+  }
+}
+@keyframes width-stuffs {
+  @while $loop > 0 {
+    0% {
+        width: random() + px;
+    } 
+    $step: -10;
+    $loop: $loop + $step; 
+  }
+}
+*/
 /* blur classes */
-/* line 16, ../scss/partials/_functions.scss */
+/* line 37, ../scss/partials/_functions.scss */
 .blur-6 {
   -webkit-filter: blur(6px);
   -moz-filter: blur(6px);
   filter: blur(6px);
 }
 
-/* line 19, ../scss/partials/_functions.scss */
+/* line 40, ../scss/partials/_functions.scss */
 .blur-5 {
   -webkit-filter: blur(5px);
   -moz-filter: blur(5px);
   filter: blur(5px);
 }
 
-/* line 22, ../scss/partials/_functions.scss */
+/* line 43, ../scss/partials/_functions.scss */
 .blur-4 {
   -webkit-filter: blur(4px);
   -moz-filter: blur(4px);
   filter: blur(4px);
 }
 
-/* line 25, ../scss/partials/_functions.scss */
+/* line 46, ../scss/partials/_functions.scss */
 .blur-3 {
   -webkit-filter: blur(3px);
   -moz-filter: blur(3px);
   filter: blur(3px);
 }
 
-/* line 28, ../scss/partials/_functions.scss */
+/* line 49, ../scss/partials/_functions.scss */
 .blur-2 {
   -webkit-filter: blur(2px);
   -moz-filter: blur(2px);
   filter: blur(2px);
 }
 
-/* line 31, ../scss/partials/_functions.scss */
+/* line 52, ../scss/partials/_functions.scss */
 .blur-1 {
   -webkit-filter: blur(1px);
   -moz-filter: blur(1px);
   filter: blur(1px);
 }
 
-/* line 34, ../scss/partials/_functions.scss */
+/* line 55, ../scss/partials/_functions.scss */
 .blur-0 {
   -webkit-filter: blur(0px);
   -moz-filter: blur(0px);
   filter: blur(0px);
 }
 
-/* line 38, ../scss/partials/_functions.scss */
+/* line 59, ../scss/partials/_functions.scss */
 .rotate-5 {
   -webkit-transform: rotate(5deg);
   -moz-transform: rotate(5deg);
@@ -295,7 +317,7 @@
   transform: rotate(5deg);
 }
 
-/* line 41, ../scss/partials/_functions.scss */
+/* line 62, ../scss/partials/_functions.scss */
 .rotate-4 {
   -webkit-transform: rotate(4deg);
   -moz-transform: rotate(4deg);
@@ -304,7 +326,7 @@
   transform: rotate(4deg);
 }
 
-/* line 44, ../scss/partials/_functions.scss */
+/* line 65, ../scss/partials/_functions.scss */
 .rotate-3 {
   -webkit-transform: rotate(3deg);
   -moz-transform: rotate(3deg);
@@ -313,7 +335,7 @@
   transform: rotate(3deg);
 }
 
-/* line 47, ../scss/partials/_functions.scss */
+/* line 68, ../scss/partials/_functions.scss */
 .rotate-2 {
   -webkit-transform: rotate(2deg);
   -moz-transform: rotate(2deg);
@@ -322,7 +344,7 @@
   transform: rotate(2deg);
 }
 
-/* line 50, ../scss/partials/_functions.scss */
+/* line 71, ../scss/partials/_functions.scss */
 .rotate-1 {
   -webkit-transform: rotate(1deg);
   -moz-transform: rotate(1deg);
@@ -331,7 +353,7 @@
   transform: rotate(1deg);
 }
 
-/* line 53, ../scss/partials/_functions.scss */
+/* line 74, ../scss/partials/_functions.scss */
 .rotate-0 {
   -webkit-transform: rotate(0deg);
   -moz-transform: rotate(0deg);
@@ -340,7 +362,7 @@
   transform: rotate(0deg);
 }
 
-/* line 56, ../scss/partials/_functions.scss */
+/* line 77, ../scss/partials/_functions.scss */
 .rotate-neg-1 {
   -webkit-transform: rotate(-1deg);
   -moz-transform: rotate(-1deg);
@@ -349,7 +371,7 @@
   transform: rotate(-1deg);
 }
 
-/* line 59, ../scss/partials/_functions.scss */
+/* line 80, ../scss/partials/_functions.scss */
 .rotate-neg-2 {
   -webkit-transform: rotate(-2deg);
   -moz-transform: rotate(-2deg);
@@ -358,7 +380,7 @@
   transform: rotate(-2deg);
 }
 
-/* line 62, ../scss/partials/_functions.scss */
+/* line 83, ../scss/partials/_functions.scss */
 .rotate-neg-3 {
   -webkit-transform: rotate(-3deg);
   -moz-transform: rotate(-3deg);
@@ -367,7 +389,7 @@
   transform: rotate(-3deg);
 }
 
-/* line 65, ../scss/partials/_functions.scss */
+/* line 86, ../scss/partials/_functions.scss */
 .rotate-neg-4 {
   -webkit-transform: rotate(-4deg);
   -moz-transform: rotate(-4deg);
@@ -376,7 +398,7 @@
   transform: rotate(-4deg);
 }
 
-/* line 68, ../scss/partials/_functions.scss */
+/* line 89, ../scss/partials/_functions.scss */
 .rotate-neg-5 {
   -webkit-transform: rotate(-5deg);
   -moz-transform: rotate(-5deg);
